--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "memegnit_bot"
+name = "tg_meme_bot"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,4 +15,5 @@ tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 # Env Files Loader
 dotenv = "0.15.0"
 # Comand-Line Arguments
-clap = "4.0.29"
+clap = { version = "4.0.29", features = ["derive"] }
+emojis = "0.5.2"
