--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ dotenv = "0.15.0"
 # Comand-Line Arguments
 clap = { version = "4.0.29", features = ["derive"] }
 emojis = "0.5.2"
+redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
+futures = "0.3.25"
