--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,6 @@ dotenv = "0.15.0"
 clap = { version = "4.0.29", features = ["derive"] }
 emojis = "0.5.2"
 redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
+diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
 futures = "0.3.25"
+chrono = "0.4.23"
