--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 TELOXIDE_TOKEN=<Your token here>
-DATABASE_URL=postgres://username:password@localhost/database
+DATABASE_URL=postgres://username:password@postgres/database
+REDIS_URL=redis://redis/
