--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ dotenv = "0.15.0"
 clap = { version = "4.0.29", features = ["derive"] }
 emojis = "0.5.2"
 redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
-diesel = { version = "2.0.0", features = ["postgres", "r2d2",  "serde_json"] }
+diesel = { version = "2.0.0", features = ["postgres", "r2d2", "serde_json"] }
 futures = "0.3.25"
-chrono = "0.4.23"
 serde_json = "1.0.89"
+derive_builder = "0.12.0"
