--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 # Env Files Loader
-dotenv = "0.15.0"
+dotenv = "0.15"
 # Comand-Line Arguments
-clap = { version = "4.0.29", features = ["derive"] }
-emojis = "0.5.2"
-diesel = { version = "2.0.0", features = ["postgres", "r2d2", "serde_json"] }
-futures = "0.3.25"
-serde_json = "1.0.89"
+clap = { version = "4.0", features = ["derive"] }
+emojis = "0.5"
+diesel = { version = "2.0", features = ["postgres", "extras"] }
+futures = "0.3"
+serde_json = "1.0"
+uuid = "1.2"
