--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       - pg_data:/var/lib/postgresql/data
     ports:
       - 5433:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U meme_bot"]
+      interval: 2s
+      timeout: 2s
+      retries: 5
 
   redis:
     image: redis:latest
@@ -23,13 +28,13 @@ services:
       context: .
     environment:
       CARGO_HOME: /app/.cargo_home
-    command: cargo run
+    command: "diesel migration run && cargo run"
     working_dir: /app
     volumes:
       - ./:/app
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
 
 volumes:
   pg_data:
