--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ clap = { version = "4.0", features = ["derive"] }
 emojis = "0.5"
 diesel = { version = "2.0", features = ["postgres", "extras"] }
 futures = "0.3"
+serde = "1.0"
 serde_json = "1.0"
-uuid = "1.2"
+uuid = { version = "1.2", features = ["v4", "serde"] }
