--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,24 @@ edition = "2021"
 [dependencies]
 # Telegram Bot Library
 teloxide = { version = "0.11", features = ["macros"] }
+tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
 # Logs Libraries
 log = "0.4"
 pretty_env_logger = "0.4"
-tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 # Env Files Loader
 dotenv = "0.15"
 # Comand-Line Arguments
 clap = { version = "4.0", features = ["derive"] }
-emojis = "0.5"
+# Database tools
 diesel = { version = "2.0", features = ["postgres", "extras"] }
+now = "0.1.3"
+uuid = { version = "1.2", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+
+emojis = "0.5"
 futures = "0.3"
 serde = "1.0"
 serde_json = "1.0"
-uuid = { version = "1.2", features = ["v4", "serde"] }
 rand = "0.8"
+
+
