--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - 5433:5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U meme_bot"]
+      test: [ "CMD-SHELL", "pg_isready -U meme_bot" ]
       interval: 2s
       timeout: 2s
       retries: 5
@@ -28,7 +28,7 @@ services:
       context: .
     environment:
       CARGO_HOME: /app/.cargo_home
-    command: sh -c "diesel migration run && cargo run"
+    command: sh -c "diesel migration run && cargo run -- --start"
     working_dir: /app
     volumes:
       - ./:/app
