--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "memegnit_bot"
+name = "tg_meme_bot"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,11 +8,24 @@ edition = "2021"
 [dependencies]
 # Telegram Bot Library
 teloxide = { version = "0.11", features = ["macros"] }
+tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
 # Logs Libraries
 log = "0.4"
 pretty_env_logger = "0.4"
-tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 # Env Files Loader
-dotenv = "0.15.0"
+dotenv = "0.15"
 # Comand-Line Arguments
-clap = "4.0.29"
+clap = { version = "4.0", features = ["derive"] }
+# Database tools
+diesel = { version = "2.0", features = ["postgres", "extras"] }
+now = "0.1.3"
+uuid = { version = "1.2", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+
+emojis = "0.5"
+futures = "0.3"
+serde = "1.0"
+serde_json = "1.0"
+rand = "0.8"
+
+
