--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,5 +12,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set up cargo cache
+      uses: actions/cache@v3
+      continue-on-error: false
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: ${{ runner.os }}-cargo-
     - name: Check
-      run: cargo check --verbose
+      run: |
+        cargo check --verbose
+        cargo fmt --all -- --check
+        cargo clippy -- -D warnings 
