--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    tags: [ "*" ]
+    tags: [ "*.*.*" ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -15,11 +15,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set version from Cargo.toml
         run: |
-          echo "version=$(cat Cargo.toml | grep -A3 '^\[package\]$' | grep -Po '(?<=^version = ")[^"]*(?=".*)')" >> $GITHUB_ENV
+          echo "app_version=$(cat Cargo.toml | grep -A3 '^\[package\]$' | grep -Po '(?<=^version = ")[^"]*(?=".*)' | tr -dc 0-9)"  >> $GITHUB_ENV
+          echo "tag_version=$(echo ${{ github.ref_name }} | tr -dc 0-9)" >> $GITHUB_ENV
       - name: Check versions
-        if: ${{ github.ref_name }} != ${{ env.version }}
+        if: ${{ env.tag_version }} != ${{ env.app_version }}
         run: |
-          echo "::error::Tag version = ${{ github.ref_name }} is not equals version from Cargo.toml = ${{ env.version }}"
+          echo "::error::Tag version = ${{ env.tag_version }} is not equals version from Cargo.toml = ${{ env.app_version }}"
           exit 1
       - name: Build application
         run: cargo build --verbose
