Fix meme top query

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:14-alpine
+    command: ["postgres", "-c", "log_statement=all"]
     environment:
       POSTGRES_USER: meme_bot
       POSTGRES_DB: meme_bot
