--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -4,6 +4,7 @@ WORKDIR /app
 
 RUN apt-get update \
     && apt-get install -y cmake build-essential \
+    && cargo install diesel_cli --no-default-features --features "postgres sqlite" --target-dir /usr/local/bin \
     && apt-get clean
 
 COPY . /app
@@ -12,8 +13,17 @@ RUN cargo build --release
 
 FROM debian:buster-slim
 
-RUN apt-get update && apt-get install -y ca-certificates libpq5 && apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN apt-get update  \
+    && apt-get install -y ca-certificates libpq5 \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /app/target/release/tg_meme_bot /usr/local/bin/tg_meme_bot
+COPY --from=builder  /usr/local/cargo/bin/diesel /usr/local/bin/diesel
+
+WORKDIR /app
+
+COPY ./migrations /app/migrations
+COPY ./diesel.toml /app/diesel.toml
 
 CMD ["tg_meme_bot", "--start"]
