--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tg_meme_bot"
-version = "0.3.2"
+version = "0.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -21,7 +21,7 @@ diesel = { version = "2.0", features = ["postgres", "extras"] }
 now = "0.1.3"
 uuid = { version = "1.2", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
-
+redis = { version = "0.22", features = ["tokio-comp", "r2d2"] }
 emojis = "0.5"
 futures = "0.3"
 serde = "1.0"
