Add OpenCV meme recognizer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     environment:
       CARGO_HOME: /app/.cargo_home
     command: sh -c "diesel migration run && cargo run -- --start"
+    #command: sh -c "tail -f /dev/null"
     working_dir: /app
     volumes:
       - ./:/app
