--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 TELOXIDE_TOKEN=<Your token here>
 DATABASE_URL=postgres://username:password@postgres/database
 REDIS_URL=redis://redis/
+RUST_LOG=info
