--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -38,7 +38,7 @@ FROM debian:bullseye-slim
 
 RUN apt-get update  \
     && apt-get install -y ca-certificates libpq5 libjpeg-dev libpng-dev libopenjp2-7 \
-      libtbb2 libtiff5 libwebp6 libopenexr25 \
+      libtbb2 libtiff5 libwebp6 libopenexr25 libgtk2.0-0 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
