--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "tg_meme_bot"
 version = "0.6.1"
 edition = "2021"
 
+[profile.docker]
+inherits = "dev"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
