Refactor redis, db, messages

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ TELOXIDE_TOKEN=<Your token here>
 DATABASE_URL=postgres://username:password@postgres/database
 REDIS_URL=redis://redis/
 RUST_LOG=info
+#ONLY_FOR_CHAT_ID=
