--- a/messages/meme_already_exists.in
+++ b/messages/meme_already_exists.in
@@ -1,1 +1,4 @@
 {user_name}, кого ты хочешь нОебать? Этот мем уже был!;
+{user_name}, ты меня не обманешь! Этот мем я уже видел!;
+{user_name}, вздумал обмануть систему и прислать мем который уже был? Я тебя раскусил!;
+{user_name}, я тут порылся в архивах и понял, что этот мем уже присылали!;
