--- a/messages/similar_meme.in
+++ b/messages/similar_meme.in
@@ -1,1 +1,3 @@
 {user_name}! С точностью в {percent}, могу сказать, что этот мем уже присылали ранее!;
+{user_name}! Меня терзают смутные сомнения, но присланный мем похож с точностью в {percent} на один из моего архива. Ты точно уверен, что это свежак?;
+{user_name}! Мне кажется, что твой мем похож на один из моего архива. (Я уверен примерно на {percent});
