--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "tg_meme_bot"
-version = "0.6.1"
+version = "0.6.2"
 edition = "2021"
+
+[profile.docker]
+inherits = "dev"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
