--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tg_meme_bot"
-version = "0.6.2"
+version = "0.6.3"
 edition = "2021"
 
 [profile.docker]
@@ -31,3 +31,4 @@ serde = "1.0"
 serde_json = "1.0"
 rand = "0.8"
 opencv = "0.76"
+anyhow = "1.0.68"
