--- a/messages/meme_already_exists.in
+++ b/messages/meme_already_exists.in
@@ -2,3 +2,11 @@
 {user_name}, ты меня не обманешь! Этот мем я уже видел!;
 {user_name}, вздумал обмануть систему и прислать мем который уже был? Я тебя раскусил!;
 {user_name}, я тут порылся в архивах и понял, что этот мем уже присылали!;
+Глядите все, тут {user_name} тыренных мемов притащил!;
+{user_name}, это же из данкест мемес канала! мы все уже видели!;
+Начинается постинг баянов! {user_name} объявляется главным идеологом баянов!;
+{user_name}, ну полистай хоть канал, тут уже было такое!;
+{user_name}, такое даже мне стыдно постить!;
+{user_name}, я отказываюсь постить этот мем, он воняет вторичностью!;
+{user_name}, сегодня не было, а может было?;
+{user_name}, воровать мемы - это низко! сделай самостоятельно!;
