--- a/messages/newbie.in
+++ b/messages/newbie.in
@@ -6,3 +6,6 @@
 Добро пожаловать, {user_name}! К сожалению, ваше заявление на отпуск потеряно, следующий отпуск можно взять через 4 года 7 месяцев, для востановления заявления пришлите мем (честно, всё именно так 😊);
 900: {user_name}, Вас приветствует Служба безопасности Сбербанка. Для отмены операции 'В фонд озеленения Луны', Сумма: 34765.00 рублей, пришлите мем (честно, всё именно так 😊);
 Добро пожаловать, {user_name}! К сожалению, ваше заявление на отсрочку от мобилизации не будет принято, пока вы не пришлете мем в этот чат;
+Если ты не голубой, нарисуй вагон другой! Добро пожаловать, {user_name}!;
+На арене цирка новый волк! Добро пожаловать, {user_name}!;
+Если это ваша первая ночь, в мемесовом клубе, вы обязаны постить, {user_name}!;
