--- a/messages/similar_meme.in
+++ b/messages/similar_meme.in
@@ -4,3 +4,4 @@
 {user_name}! Загадка: пахнет так же, вкус такой же, кажется, это баян? (Я уверен примерно на {percent});
 Это же на {percent} такое же, как и вот это!;
 Если твоей целью было запостить на {percent} похожее, то это вышло удачно, {user_name}!;
+Мы тут не любим повторы. А это на {percent} повтор, дружище {user_name}!;
