--- a/messages/meme_already_exists.in
+++ b/messages/meme_already_exists.in
@@ -10,3 +10,4 @@
 {user_name}, я отказываюсь постить этот мем, он воняет вторичностью!;
 {user_name}, сегодня не было, а может было?;
 {user_name}, воровать мемы - это низко! Сделай самостоятельно!;
+{user_name}, я вот люблю свежую пищу, свежий воздух и свежие мемы!;
