Add new texts (#32)

--- a/messages/similar_meme.in
+++ b/messages/similar_meme.in
@@ -1,3 +1,7 @@
 {user_name}! С точностью в {percent}, могу сказать, что этот мем уже присылали ранее!;
 {user_name}! Меня терзают смутные сомнения, но присланный мем похож с точностью в {percent} на один из моего архива. Ты точно уверен, что это свежак?;
 {user_name}! Мне кажется, что твой мем похож на один из моего архива. (Я уверен примерно на {percent});
+{user_name}! Загадка: пахнет так же, вкус такой же, кажется, это баян? (Я уверен примерно на {percent});
+Это же на {percent} такое же, как и вот это!;
+Если твоей целью было запостить на {percent} похожее, то это вышло удачно, {user_name}!;
+Мы тут не любим повторы. А это на {percent} повтор, дружище {user_name}!;
