--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,32 +1,15 @@
 FROM rust:latest as builder
 
+COPY --from=medic84/opencv:latest /usr/local/lib/libopencv_* /usr/local/lib/
+COPY --from=medic84/opencv:latest /usr/local/bin/opencv_* /usr/local/bin/
+COPY --from=medic84/opencv:latest /usr/local/include/opencv4 /usr/local/include/opencv4/
+COPY --from=medic84/opencv:latest /usr/local/lib/cmake/opencv4 /usr/local/lib/cmake/opencv4/
+COPY --from=medic84/opencv:latest /usr/local/share/opencv4 /usr/local/share/opencv4/
+
 RUN apt-get update \
-    && apt-get install -y cmake build-essential clang git \
-      libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev libclang-dev \
-      libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libdc1394-22-dev llvm-dev \
+    && apt-get install -y cmake build-essential clang \
     && cargo install diesel_cli --no-default-features --features "postgres" --target-dir /usr/local/bin \
     && apt-get clean
-
-WORKDIR /opt
-
-RUN git clone --depth 1 --branch '4.7.0' https://github.com/opencv/opencv.git && \
-    cd ./opencv && mkdir build && cd build && \
-    cmake \
-      -D CMAKE_BUILD_TYPE=RELEASE \
-      -D WITH_V4L=ON \
-      -D WITH_QT=OFF \
-      -D WITH_OPENGL=ON \
-      -D WITH_GSTREAMER=OFF \
-      -D OPENCV_GENERATE_PKGCONFIG=OFF \
-      -D OPENCV_ENABLE_NONFREE=OFF \
-      -D INSTALL_PYTHON_EXAMPLES=OFF \
-      -D INSTALL_C_EXAMPLES=OFF \
-      -D CMAKE_INSTALL_PREFIX=/usr/local \
-      -D BUILD_EXAMPLES=OFF \
-    .. && \
-    make -j"$(nproc)" && \
-    make install && \
-    rm -rf /opt/opencv
 
 WORKDIR /app
 
@@ -44,8 +27,8 @@ RUN apt-get update  \
 
 COPY --from=builder /app/target/release/tg_meme_bot /usr/local/bin/tg_meme_bot
 COPY --from=builder  /usr/local/cargo/bin/diesel /usr/local/bin/diesel
-COPY --from=builder  /usr/local/lib/ /usr/local/lib/
-COPY --from=builder  /usr/local/bin/ /usr/local/bin/
+COPY --from=medic84/opencv:latest /usr/local/lib/libopencv_* /usr/local/lib/
+COPY --from=medic84/opencv:latest /usr/local/bin/opencv_* /usr/local/bin/
 
 WORKDIR /app
 
