--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tg_meme_bot"
-version = "0.9.1"
+version = "0.9.2"
 edition = "2021"
 
 [profile.docker]
@@ -32,3 +32,4 @@ serde_json = "1.0"
 rand = "0.8"
 opencv = "0.78.0"
 anyhow = "1.0"
+itertools = "0.11.0"
