--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
 name = "tg_meme_bot"
-version = "0.9.2"
+version = "0.9.3"
 edition = "2021"
 
 [profile.docker]
 inherits = "dev"
+
+[profile.release]
+lto = true
+strip = true
+opt-level = "z"
+# panic = "abort"
+codegen-units = 1
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -25,11 +32,12 @@ now = "0.1"
 uuid = { version = "1.2", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 redis = { version = "0.23", features = ["tokio-comp", "r2d2"] }
-emojis = "0.6.0"
 futures = "0.3"
 serde = "1.0"
 serde_json = "1.0"
 rand = "0.8"
-opencv = "0.78.0"
+opencv = { version = "0.84.4", default-features = false, features = ["clang-runtime", "imgproc", "imgcodecs"] }
 anyhow = "1.0"
 itertools = "0.11.0"
+diesel-async = { version = "0.3.2", features = ["postgres", "deadpool"] }
+once_cell = "1.18.0"
