--- a/messages/help_text_addition.in
+++ b/messages/help_text_addition.in
@@ -1,2 +1,2 @@
-Чтобы бот не посчитал Ваше сообщение мемом, достаточно указать в тексте сообщения к картинке <b>nomem</b>
+Чтобы бот не посчитал твое сообщение мемом, достаточно указать в тексте сообщения к картинке <b>nomem</b>
 Issue\Предложения: <a href="https://github.com/mediclab/telegram_meme_bot/issues">писать сюда</a>
