--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -9,7 +9,7 @@ COPY --from=medic84/opencv:4.8.0 /usr/local/share/opencv4 /usr/local/share/openc
 RUN apt-get update \
     && apt-get install -y cmake build-essential clang pkg-config \
       libavcodec-dev libavformat-dev libswscale-dev libtbb-dev libjpeg-dev libpng-dev libtiff-dev libpq-dev llvm-dev \
-      libgtk2.0-dev libdc1394-22-dev \
+      libgtk2.0-dev libdc1394-22-dev libssl-dev \
     && cargo install diesel_cli --no-default-features --features "postgres" --target-dir /usr/local/bin \
     && apt-get clean
 
