--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ TELOXIDE_TOKEN=<Your token here>
 DATABASE_URL=postgres://username:password@postgres/database
 REDIS_URL=redis://redis/
 RUST_LOG=info
+SENTRY_DSN=
 #ONLY_FOR_CHAT_ID=
