--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -52,3 +52,7 @@ jobs:
           push: true
           tags: "${{ secrets.DOCKER_HOME_HOST }}/mediclab/tg_meme_bot:latest,${{ secrets.DOCKER_HOME_HOST }}/mediclab/tg_meme_bot:${{ env.app_version }}"
           platforms: linux/amd64,linux/arm64
+
+      - name: Curl for update stack on server
+        run: |
+          curl -fs -X POST ${{ secrets.CURL_WEBHOOK_URL }}
