--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tg_meme_bot"
-version = "0.9.7"
+version = "0.10.0"
 edition = "2021"
 
 [profile.docker]
@@ -42,3 +42,4 @@ itertools = "0.11.0"
 diesel-async = { version = "0.3.2", features = ["postgres", "deadpool"] }
 once_cell = "1.18.0"
 sentry = "0.32.1"
+clokwerk = "0.4.0"
