--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-TELOXIDE_TOKEN=<Your token here>
+BOT_TOKEN=<Your token here>
 DATABASE_URL=postgres://username:password@postgres/database
 REDIS_URL=redis://redis/
 RUST_LOG=info
