--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "tg_meme_bot"
-version = "0.10.0"
+version = "0.11.0"
 edition = "2021"
 
 [profile.docker]
 inherits = "dev"
 
 [profile.release]
-lto = true
-strip = true
+lto = "fat"
+strip = "debuginfo"
 opt-level = "z"
-# panic = "abort"
+panic = "abort"
 codegen-units = 1
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -43,3 +43,4 @@ diesel-async = { version = "0.3.2", features = ["postgres", "deadpool"] }
 once_cell = "1.18.0"
 sentry = "0.32.1"
 clokwerk = "0.4.0"
+envconfig = "0.10.0"
