Decrease build time

--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,4 +1,4 @@
-FROM rust:slim-bullseye as builder
+FROM medic84/rust-diesel:latest as builder
 
 COPY --from=medic84/opencv:4.8.0 /usr/local/lib/libopencv_* /usr/local/lib/
 COPY --from=medic84/opencv:4.8.0 /usr/local/bin/opencv_* /usr/local/bin/
@@ -10,7 +10,6 @@ RUN apt-get update \
     && apt-get install -y cmake build-essential clang pkg-config \
       libavcodec-dev libavformat-dev libswscale-dev libtbb-dev libjpeg-dev libpng-dev libtiff-dev libpq-dev llvm-dev \
       libgtk2.0-dev libdc1394-22-dev libssl-dev \
-    && cargo install diesel_cli --no-default-features --features "postgres" --target-dir /usr/local/bin \
     && apt-get clean
 
 WORKDIR /app
@@ -22,6 +21,7 @@ RUN cargo build --release
 FROM debian:bullseye-slim
 
 ARG BOT_VERSION=unknown
+ENV BOT_VERSION=$BOT_VERSION
 
 MAINTAINER "mediclab"
 LABEL org.opencontainers.image.authors="mediclab <m@mdlb.cc>"
