--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ opt-level = "z"
 panic = "abort"
 codegen-units = 1
 
+[workspace]
+members = [".", "migration"]
+
 [dependencies]
 # Telegram Bot Library
 teloxide = { version = "0.12", features = ["macros"] }
@@ -34,11 +37,14 @@ futures = "0.3"
 serde = "1.0"
 serde_json = "1.0"
 rand = "0.8"
-opencv = { version = "0.88", default-features = false, features = ["clang-runtime", "imgproc", "imgcodecs"] }
+opencv = { version = "0.92", default-features = false, features = ["clang-runtime", "imgproc", "imgcodecs"] }
 anyhow = "1.0"
-itertools = "0.12"
+itertools = "0.13"
 diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
 sentry = "0.32"
 envconfig = "0.10"
-async-nats = "0.34"
+async-nats = "0.35"
 tokio-cron-scheduler = { version = "0.10", features = ["signal"] }
+once_cell = "1.19.0"
+sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls", "with-uuid", "with-chrono"] }
+migration = { path = "migration" }
