Add messages to database

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,6 @@
-BOT_TOKEN=<Your token here>
+BOT_TOKEN=
 DATABASE_URL=postgres://username:password@postgres/database
 REDIS_URL=redis://redis/
 RUST_LOG=info
 SENTRY_DSN=
-#ONLY_FOR_CHAT_ID=
-
-NATS_SERVER=nats
-NATS_USER=
-NATS_PASSWORD=
+CHAT_ID=
