--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,5 +1,11 @@
 FROM rust:slim-bullseye as builder
 
+RUN DEBIAN_FRONTEND=noninteractive apt-get update \
+    && apt-get install -y cmake build-essential clang pkg-config \
+          libavcodec-dev libavformat-dev libswscale-dev libtbb-dev llvm-dev \
+          libgtk2.0-dev libdc1394-22-dev libssl-dev libjpeg-dev libpng-dev libtiff-dev libpq-dev \
+    && apt-get clean
+
 COPY --from=medic84/opencv:4.8.0 /usr/local/lib/libopencv_* /usr/local/lib/
 COPY --from=medic84/opencv:4.8.0 /usr/local/bin/opencv_* /usr/local/bin/
 COPY --from=medic84/opencv:4.8.0 /usr/local/include/opencv4 /usr/local/include/opencv4/
@@ -22,7 +28,7 @@ LABEL org.opencontainers.image.authors="mediclab <m@mdlb.cc>"
 LABEL version=$BOT_VERSION
 LABEL description="Bot for mem-chats"
 
-RUN apt-get update  \
+RUN DEBIAN_FRONTEND=noninteractive apt-get update  \
     && apt-get install -y ca-certificates libpq5 libjpeg-dev libpng-dev libopenjp2-7 libtbb2 libtiff5 libwebp6 \
       libopenexr25 libgtk2.0-0 \
     && apt-get clean \
