--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
             org.opencontainers.image.title=${{ env.IMAGE_TITLE }}
             org.opencontainers.image.description=${{ env.IMAGE_DESCRIPTION }}
             org.opencontainers.image.vendor=mediclab
+            org.opencontainers.image.authors=mediclab <m@mdlb.cc>
 
       - name: Login to Private Docker
         uses: docker/login-action@v3
@@ -86,7 +87,7 @@ jobs:
           retention-days: 1
 
   merge:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs:
       - build-image
     steps:
@@ -116,6 +117,7 @@ jobs:
             org.opencontainers.image.title=${{ env.IMAGE_TITLE }}
             org.opencontainers.image.description=${{ env.IMAGE_DESCRIPTION }}
             org.opencontainers.image.vendor=mediclab
+            org.opencontainers.image.authors=mediclab <m@mdlb.cc>
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}            
